--- a/style.css
+++ b/style.css
@@ -14,6 +14,129 @@ html {
 
 /* End of root style */
 
+/* Navbar */
+
+.navbar {
+    width: 100%;
+    height: 8rem;
+    background-color: rgba(0, 0, 0, 0.9);
+    position: fixed;
+    top: -8rem;
+    z-index: 10;
+    padding: 3rem;
+    transition: height 0.5s;
+    animation: animateNavbar 1s .5s forwards;
+}
+
+@keyframes animateNavbar {
+    0% {
+        top: -8rem;
+    }
+
+    100% {
+        top: 0;
+    }
+}
+
+.navbar.change {
+    height: 100vh;
+}
+
+.logo {
+    position: absolute;
+    top: 1.5rem;
+    left: 4rem;
+}
+
+.logo a {
+    font-family: 'MADE Soulmaze', sans-serif;
+    font-size: 2.5rem;
+    color: #eee;
+    letter-spacing: 0.1rem;
+}
+
+.logo span {
+    font-family: 'MADE Soulmaze', sans-serif;
+    font-size: 3.5rem;
+    font-weight: bold;
+    color: #9e0e09;
+}
+
+.nav-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.2s;
+}
+
+.change .nav-list {
+    opacity: 1;
+    visibility: visible;
+    transition: all .7s 0.5s; 
+}
+
+.nav-link {
+    font-family: 'MADE Soulmaze', sans-serif;
+    font-size: 4rem;
+    letter-spacing: .3rem;
+    color: #fff;
+    margin: 2rem 0;
+    transition: color 0.4s;
+}
+
+.nav-link:hover {
+    color: #9e0e09;
+}
+
+/* End of navbar styles */
+
+/* Menu */
+.menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 4rem;
+    height: 4rem;
+    position: fixed;
+    top: 2rem;
+    right: 4rem;
+    z-index: 100;
+    cursor: pointer;
+}
+
+.line {
+    width: 100%;
+    height: .2rem;
+    background-color: #eee;
+    transition: transform 0.3s;
+}
+
+.line-1 {
+    width: 50%;
+}
+
+.change .line-1 {
+    transform: translate(100%, 1rem) rotate(-35deg);
+    transform-origin: right;
+}
+
+.line-3 {
+    width: 50%;
+    margin-left: auto;
+}
+
+.change .line-3 {
+    transform: translateY(-1rem) rotate(35deg);
+    transform-origin: right;
+}
+/* End of menu styles */
+
 .section-1 {
     width: 100%;
     height: 100vh;
@@ -34,6 +157,8 @@ html {
 .banner-heading {
     margin-bottom: 4rem;
     height: 20rem;
+    perspective: 50rem;
+    overflow: hidden;
 }
 
 .banner-heading span {
@@ -43,6 +168,61 @@ html {
     text-transform: uppercase;
     color: white;
     text-shadow: .3rem .3rem .6rem rgba(0, 0, 0, 0.5);
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    transform: translateZ(8rem);
+    opacity: 0;
+    letter-spacing: 3rem;
+}
+
+.heading-1{
+    animation: animateHeading 12s 3s infinite;
+}
+
+.heading-2{
+    animation: animateHeading 12s 6s infinite;
+}
+
+.heading-3{
+    animation: animateHeading 12s 9s infinite;
+}
+
+.heading-4{
+    animation: animateHeading 12s 12s infinite;
+}
+
+@keyframes animateHeading {
+    0% {
+        transform: translateZ(8rem);
+        opacity: 0;
+        letter-spacing: 3rem;
+    }
+
+    3% {
+        transform: translateZ(0);
+        opacity: 1;
+        letter-spacing: 1.5rem;
+    }
+
+    25% {
+        transform: translateZ(0);
+        opacity: 1;
+        letter-spacing: 1.5rem;
+    }
+
+    28% {
+        transform: translateZ(8rem);
+        opacity: 0;
+        letter-spacing: 3rem;
+    }
+
+    100% {
+        transform: translateZ(8rem);
+        opacity: 0;
+        letter-spacing: 3rem;
+    }
 }
 
 .banner-paragraph {
@@ -55,6 +235,9 @@ html {
     margin: 0 auto 4rem auto;
     padding: 1rem 0;
     box-shadow: 1rem 1rem 5rem rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    visibility: hidden;
+    animation: fadeAnimation 1s 1.5s forwards;
 }
 
 .banner-btn{
@@ -69,4 +252,37 @@ html {
     box-shadow: 1rem 2rem 3rem rgba(0, 0, 0, 0.5);
     text-shadow: .6rem .3rem .2rem rgba(0, 0, 0, 0.4);
     cursor: pointer;
+    opacity: 0;
+    visibility: hidden;
+    animation: fadeAnimation 1s 2s forwards;
+    position: relative;
+    overflow: hidden;
+}
+
+.banner-btn::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, transparent, #fff, transparent);
+    position: absolute;
+    top: 0;
+    left: -100%;
+    transform: skewX(-30deg);
+    transition: left 0.5s;
+}
+
+.banner-btn:hover::before {
+    left: 100%;
+}
+
+@keyframes fadeAnimation {
+    0% {
+        opacity: 0;
+        visibility: hidden;
+    }  
+
+    100% {
+        opacity: 1;
+        visibility: visible;
+    }
 }
